--- a/renderer/renderer.vcxproj
+++ b/renderer/renderer.vcxproj
@@ -145,6 +145,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="atmosphere\model.cpp" />
     <ClCompile Include="Cloud.cpp" />
     <ClCompile Include="GeneralFrameBuffer.cpp" />
     <ClCompile Include="HeightMap.cpp" />
@@ -166,6 +167,8 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="atmosphere\constants.h" />
+    <ClInclude Include="atmosphere\model.h" />
     <ClInclude Include="Cloud.h" />
     <ClInclude Include="FrameBuffer.h" />
     <ClInclude Include="GeneralFrameBuffer.h" />
@@ -184,6 +187,12 @@
     <ClInclude Include="WorleyNoise.h" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="atmosphere\definitions.glsl" />
+    <None Include="atmosphere\definitions.glsl.inc" />
+    <None Include="atmosphere\functions.glsl" />
+    <None Include="atmosphere\functions.glsl.inc" />
+    <None Include="shader\AtmosphereFShader.glsl" />
+    <None Include="shader\AtmosphereVShader.glsl" />
     <None Include="shader\CloudFShader.glsl" />
     <None Include="shader\CloudVShader.glsl" />
     <None Include="shader\HeightMapFShader.glsl" />
