--- a/renderer/renderer.vcxproj.filters
+++ b/renderer/renderer.vcxproj.filters
@@ -178,5 +178,7 @@
     </None>
     <None Include="shader\AtmosphereFShader.glsl" />
     <None Include="shader\AtmosphereVShader.glsl" />
+    <None Include="shader\TextRenderingFShader.glsl" />
+    <None Include="shader\TextRenderingVShader.glsl" />
   </ItemGroup>
 </Project>
