Remove the sphere in atmospheric scattering shader.

--- a/core/core.vcxproj.filters
+++ b/core/core.vcxproj.filters
@@ -116,4 +116,7 @@
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <Font Include="tools\fonts\arial.ttf" />
+  </ItemGroup>
 </Project>
