--- a/core/core.vcxproj.filters
+++ b/core/core.vcxproj.filters
@@ -71,6 +71,9 @@
     <ClInclude Include="tools\TextRenderer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Utility.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="math\Matrix4.cpp">
