--- a/renderer/renderer.vcxproj.filters
+++ b/renderer/renderer.vcxproj.filters
@@ -53,9 +53,6 @@
     <ClCompile Include="Trajectory.cpp">
       <Filter>StaticObjects</Filter>
     </ClCompile>
-    <ClCompile Include="Cloud.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="GeneralFrameBuffer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -69,6 +66,12 @@
       <Filter>Others</Filter>
     </ClCompile>
     <ClCompile Include="atmosphere\model.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Others\Voxelization.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="atmosphere\Cloud.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -103,9 +106,6 @@
     <ClInclude Include="Lightings\PointLight.h">
       <Filter>Lightings</Filter>
     </ClInclude>
-    <ClInclude Include="Cloud.h">
-      <Filter>Core</Filter>
-    </ClInclude>
     <ClInclude Include="FrameBuffer.h">
       <Filter>Core</Filter>
     </ClInclude>
@@ -125,6 +125,15 @@
       <Filter>Core</Filter>
     </ClInclude>
     <ClInclude Include="atmosphere\model.h">
+      <Filter>Core</Filter>
+    </ClInclude>
+    <ClInclude Include="Configuration.h">
+      <Filter>Core</Filter>
+    </ClInclude>
+    <ClInclude Include="Others\Voxelization.h">
+      <Filter>Core</Filter>
+    </ClInclude>
+    <ClInclude Include="atmosphere\Cloud.h">
       <Filter>Core</Filter>
     </ClInclude>
   </ItemGroup>
