--- a/renderer/renderer.vcxproj
+++ b/renderer/renderer.vcxproj
@@ -190,6 +190,7 @@
     <None Include="atmosphere\definitions.glsl.inc" />
     <None Include="atmosphere\functions.glsl" />
     <None Include="atmosphere\functions.glsl.inc" />
+    <None Include="imgui.ini" />
     <None Include="shader\AtmosphereFShader.glsl" />
     <None Include="shader\AtmosphereVShader.glsl" />
     <None Include="shader\CloudFShader.glsl" />
