--- a/renderer/renderer.vcxproj.filters
+++ b/renderer/renderer.vcxproj.filters
@@ -177,5 +177,6 @@
     <None Include="shader\AtmosphereVShader.glsl" />
     <None Include="shader\TextRenderingFShader.glsl" />
     <None Include="shader\TextRenderingVShader.glsl" />
+    <None Include="imgui.ini" />
   </ItemGroup>
 </Project>
