A little example of compute shader: Inverse the color of an image

--- a/core/core.vcxproj
+++ b/core/core.vcxproj
@@ -157,6 +157,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Camera.h" />
+    <ClInclude Include="ComputeShader.h" />
     <ClInclude Include="GameTimer.h" />
     <ClInclude Include="tools\Imgui\imgui_impl_opengl3.h" />
     <ClInclude Include="tools\Imgui\imgui_impl_win32.h" />
@@ -182,6 +183,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Camera.cpp" />
+    <ClCompile Include="ComputeShader.cpp" />
     <ClCompile Include="GameTimer.cpp" />
     <ClCompile Include="tools\Imgui\imgui_impl_opengl3.cpp" />
     <ClCompile Include="tools\Imgui\imgui_impl_win32.cpp" />
