--- a/renderer/renderer.vcxproj
+++ b/renderer/renderer.vcxproj
@@ -197,7 +197,10 @@
     <None Include="shader\CloudFShader.glsl" />
     <None Include="shader\CloudVShader.glsl" />
     <None Include="shader\ComputeShader\InversePictureCS.glsl" />
+    <None Include="shader\ComputeShader\PrefixSum2DCS.glsl" />
     <None Include="shader\ComputeShader\PrefixSumCS.glsl" />
+    <None Include="shader\EmptrVShader.glsl" />
+    <None Include="shader\DepthOfFieldFShader.glsl" />
     <None Include="shader\GeneralFS.glsl" />
     <None Include="shader\GeneralVS.glsl" />
     <None Include="shader\HeightMapFShader.glsl" />
