--- a/renderer/renderer.vcxproj.filters
+++ b/renderer/renderer.vcxproj.filters
@@ -187,5 +187,8 @@
     <None Include="shader\TestCShader.glsl" />
     <None Include="shader\ComputeShader\PrefixSumCS.glsl" />
     <None Include="shader\ComputeShader\InversePictureCS.glsl" />
+    <None Include="shader\ComputeShader\PrefixSum2DCS.glsl" />
+    <None Include="shader\EmptrVShader.glsl" />
+    <None Include="shader\DepthOfFieldFShader.glsl" />
   </ItemGroup>
 </Project>
