--- a/renderer/renderer.vcxproj.filters
+++ b/renderer/renderer.vcxproj.filters
@@ -190,5 +190,10 @@
     <None Include="shader\ComputeShader\PrefixSum2DCS.glsl" />
     <None Include="shader\EmptrVShader.glsl" />
     <None Include="shader\DepthOfFieldFShader.glsl" />
+    <None Include="shader\ComputeShader\ValueNoiseCS.glsl" />
+    <None Include="shader\ComputeShader\PerlinNoiseCS.glsl" />
+    <None Include="shader\ComputeShader\PerlinNoiseBufferCS.glsl" />
+    <None Include="shader\ComputeShader\CloudDetailTextureNoiseCS.glsl" />
+    <None Include="shader\ComputeShader\CloudBaseTextureNoiseCS.glsl" />
   </ItemGroup>
 </Project>
