--- a/core/core.vcxproj
+++ b/core/core.vcxproj
@@ -159,6 +159,7 @@
     <ClInclude Include="Camera.h" />
     <ClInclude Include="ComputeShader.h" />
     <ClInclude Include="GameTimer.h" />
+    <ClInclude Include="resources\ResourceBase.h" />
     <ClInclude Include="tools\Imgui\imgui_impl_opengl3.h" />
     <ClInclude Include="tools\Imgui\imgui_impl_win32.h" />
     <ClInclude Include="InputDevice.h" />
@@ -177,7 +178,6 @@
     <ClInclude Include="tools\TextRenderer.h" />
     <ClInclude Include="Texture.h" />
     <ClInclude Include="tools\Debug.h" />
-    <ClInclude Include="Transform.h" />
     <ClInclude Include="Utility.h" />
     <ClInclude Include="Window.h" />
   </ItemGroup>
@@ -185,6 +185,7 @@
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="ComputeShader.cpp" />
     <ClCompile Include="GameTimer.cpp" />
+    <ClCompile Include="resources\ResourceBase.cpp" />
     <ClCompile Include="tools\Imgui\imgui_impl_opengl3.cpp" />
     <ClCompile Include="tools\Imgui\imgui_impl_win32.cpp" />
     <ClCompile Include="Keyboard.cpp" />
@@ -197,7 +198,6 @@
     <ClCompile Include="tools\TextRenderer.cpp" />
     <ClCompile Include="Texture.cpp" />
     <ClCompile Include="tools\Debug.cpp" />
-    <ClCompile Include="Transform.cpp" />
     <ClCompile Include="Window.cpp" />
   </ItemGroup>
   <ItemGroup>
