--- a/renderer/renderer.vcxproj.filters
+++ b/renderer/renderer.vcxproj.filters
@@ -53,9 +53,6 @@
     <ClCompile Include="PerlinNoise.cpp">
       <Filter>Others</Filter>
     </ClCompile>
-    <ClCompile Include="atmosphere\model.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="Others\Voxelization.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -70,6 +67,9 @@
     </ClCompile>
     <ClCompile Include="GameObject.cpp">
       <Filter>Core</Filter>
+    </ClCompile>
+    <ClCompile Include="atmosphere\AtmosphereModel.cpp">
+      <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -109,9 +109,6 @@
     <ClInclude Include="atmosphere\constants.h">
       <Filter>Core</Filter>
     </ClInclude>
-    <ClInclude Include="atmosphere\model.h">
-      <Filter>Core</Filter>
-    </ClInclude>
     <ClInclude Include="Configuration.h">
       <Filter>Core</Filter>
     </ClInclude>
@@ -125,6 +122,9 @@
       <Filter>Core</Filter>
     </ClInclude>
     <ClInclude Include="GameObject.h">
+      <Filter>Core</Filter>
+    </ClInclude>
+    <ClInclude Include="atmosphere\AtmosphereModel.h">
       <Filter>Core</Filter>
     </ClInclude>
   </ItemGroup>
