--- a/core/core.vcxproj
+++ b/core/core.vcxproj
@@ -159,7 +159,8 @@
     <ClInclude Include="Camera.h" />
     <ClInclude Include="ComputeShader.h" />
     <ClInclude Include="GameTimer.h" />
-    <ClInclude Include="Model.h" />
+    <ClInclude Include="AssimpModel.h" />
+    <ClInclude Include="resources\ResourceManager.h" />
     <ClInclude Include="resources\ResourceBase.h" />
     <ClInclude Include="tools\Imgui\imgui_impl_opengl3.h" />
     <ClInclude Include="tools\Imgui\imgui_impl_win32.h" />
@@ -186,7 +187,8 @@
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="ComputeShader.cpp" />
     <ClCompile Include="GameTimer.cpp" />
-    <ClCompile Include="Model.cpp" />
+    <ClCompile Include="AssimpModel.cpp" />
+    <ClCompile Include="resources\ResourceManager.cpp" />
     <ClCompile Include="resources\ResourceBase.cpp" />
     <ClCompile Include="tools\Imgui\imgui_impl_opengl3.cpp" />
     <ClCompile Include="tools\Imgui\imgui_impl_win32.cpp" />
