--- a/renderer/renderer.vcxproj
+++ b/renderer/renderer.vcxproj
@@ -105,7 +105,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>..\basic;..\GLEW\include\GL</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\core;..\GLEW\include\GL</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
